--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 </head>
 <body>
 	<h1>Hello World</h1>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </body>
 <html>
