--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <head>
+	<script src="eight_ball.js"></script>
 </head>
 <body>
-	<h1>Hello World</h1>
+	<div class="temp">
+		<p id="output"></p>
+	</div>
+	<button name="button" id="button">Try Me!</button>
+
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+	<script type="text/javascript">
+		$('#button').click(function(){
+			alert('type shit in here.');
+		});
+	</script>
+	
 </body>
-<html>
+</html>
