--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="eight_ball.js"></script>
+	<meta charset="UTF-8">
+	<title>8-ball As Fuck</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+	<meta name="description" content="Make the most important decisions of your life by consulting with the Magic 8-ball. FREE.">
+	<meta property="og:site_name" content="8-ball As Fuck">
+	<meta property="og:url" content="">
+	<meta property="og:locale" content="en_US">
+	<meta property="og:description" content="Use the Magic 8-ball to change the course of your life">
 
+	<link rel="icon" type="image/ico" href="images/favicon.ico">
+
+	<link rel="stylesheet" type="text/css" href="css/eight_ball.css">
+	<link href='http://fonts.googleapis.com/css?family=Russo+One' rel='stylesheet' type='text/css'>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="js/eight_ball.js"></script>
 </head>
 <body>
-	<div class="temp">
-		<p id="output"></p>
+	<div class="header">
+		<h1>Magic 8-Ball</h1>
+	</div>	
+	<div class="container">
+		<div class="ball">
+			<p id="output"></p>
+		</div>
+		<div class="query">	
+			<input type="text" name="question" id="question" ></input>
+		</div>
+		<div class="button">		
+			<button name="button" id="button">Try Me!</button>
+		</div>
 	</div>
-	<button name="button" id="button">Try Me!</button>
-
 
 
 
