--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
 	<div class="container">
 		<div class="ball">
 			<p id="output"></p>
+			<img src="images/ball.png" height="425" width=
+			"425">
 		</div>
 		<div class="query">	
-			<input type="text" name="question" id="question" ></input>
+			<input type="text" name="question" id="question"></input>
 		</div>
 		<div class="button">		
 			<button name="button" id="button">Try Me!</button>
