--- a/index.html
+++ b/index.html
@@ -24,16 +24,19 @@
 	</div>	
 	<div class="container">
 		<div class="ball">
-			<p id="output"></p>
+			<p id="user-query"></p>
 			<img src="images/ball.png" height="425" width=
 			"425">
+			<p id="output"></p>	
 		</div>
-		<div class="query">	
-			<input type="text" name="question" id="question"></input>
-		</div>
-		<div class="button">		
-			<button name="button" id="button">Try Me!</button>
-		</div>
+		<div class="interaction">
+			<div class="query-area">	
+				<input type="text" name="question" id="question" value="Ask the 8-Ball"></input>
+			</div>
+			<div class="button">		
+				<button name="button" id="button">Try Me!</button>
+			</div>
+		</div>	
 	</div>
 
 
