--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 		</div>
 		<div class="interaction">
 			<div class="query-area">	
-				<input type="text" name="question" id="question" value="Ask the 8-Ball"></input>
+				<input type="text" name="question" id="question" placeholder="Ask the 8-Ball"></input>
 			</div>
 			<div class="button">		
-				<button name="button" id="button">Try Me!</button>
+				<button name="button" id="button">Click for Answer</button>
 			</div>
 		</div>	
 	</div>
