--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>8-ball As Fuck</title>
+	<title>Magic 8-Ball</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta name="description" content="Make the most important decisions of your life by consulting with the Magic 8-ball. FREE.">
-	<meta property="og:site_name" content="8-ball As Fuck">
+	<meta property="og:site_name" content="Magic 8-ball">
 	<meta property="og:url" content="">
 	<meta property="og:locale" content="en_US">
 	<meta property="og:description" content="Use the Magic 8-ball to change the course of your life">
